mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      securityContext:
        runAsUser: 999
        fsGroup: 999
      containers:
      - name: mysql
        image: wroquem/mysql-custom:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: data
        persistentVolumeClaim: { claimName: mysql-pvc }
      - name: tmp
        emptyDir: {}
