service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-rest-service
spec:
  selector:
    app: python-rest
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
