ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mi-app.ejemplo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-rest-service
            port:
              number: 80
